--- a/Lab_6_CRUD_operations/Lab_6_CRUD_operations.csproj
+++ b/Lab_6_CRUD_operations/Lab_6_CRUD_operations.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Database\employee.cshtml">
+    <Content Update="Views\Employee\employee.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
