--- a/Lab_6_CRUD_operations/appsettings.json
+++ b/Lab_6_CRUD_operations/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-5TNIE0I\\SQLEXPRESS;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LAPTOP-FLAKDNE0\\SQLEXPRESS;Database=StoreDB;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
